--- a/Admin/esp-admin/pom.xml
+++ b/Admin/esp-admin/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>esp-admin</name>
-	<description>Enterprise Service Platform</description>
+	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -23,13 +23,6 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
-
-	<modules>
-		<module>esp-registry</module>
-		<module>esp-config</module>
-		<module>esp-admin</module>
-		<module>esp-common</module>
-	</modules>
 
 	<dependencies>
 		<dependency>
