--- a/Admin/esp-admin/pom.xml
+++ b/Admin/esp-admin/pom.xml
@@ -23,6 +23,10 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<mybatis-spring-boot-starter.version>1.3.1</mybatis-spring-boot-starter.version>
+		<druid.version>1.1.3</druid.version>
+		<mysql-connector-java.version>5.1.44</mysql-connector-java.version>
+		<jackson-core.version>2.8.9</jackson-core.version>
+		<pagehelper-spring-boot-starter.version>1.1.1</pagehelper-spring-boot-starter.version>
 	</properties>
 
 	<dependencies>
@@ -51,17 +55,22 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-			<version>1.1.3</version>
+			<version>${druid.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.44</version>
+			<version>${mysql-connector-java.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.8.9</version>
+			<version>${jackson-core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>${pagehelper-spring-boot-starter.version}</version>
 		</dependency>
 
 
