--- a/Admin/esp-admin/pom.xml
+++ b/Admin/esp-admin/pom.xml
@@ -27,12 +27,24 @@
 		<mysql-connector-java.version>5.1.44</mysql-connector-java.version>
 		<jackson-core.version>2.8.9</jackson-core.version>
 		<pagehelper-spring-boot-starter.version>1.1.1</pagehelper-spring-boot-starter.version>
+		<spring-boot-starter-log4j.version>1.3.0.RELEASE</spring-boot-starter-log4j.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j</artifactId>
+			<version>${spring-boot-starter-log4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
