--- a/Admin/esp-registry/src/main/resources/application.yml
+++ b/Admin/esp-registry/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+spring:
+  application:
+    name: registry
 server:
   port: 8761
 eureka:
@@ -8,6 +11,7 @@ eureka:
     register-with-eureka: false
     service-url:
       default-zone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
 ---
 spring:
   profiles: docker
