--- a/Admin/esp-registry/pom.xml
+++ b/Admin/esp-registry/pom.xml
@@ -46,7 +46,7 @@
     </dependencies>
 
     <build>
-        <finalName>esp-registry</finalName>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
