--- a/Admin/esp-config/pom.xml
+++ b/Admin/esp-config/pom.xml
@@ -59,7 +59,7 @@
         </dependency>
     </dependencies>
 
-    <dependencyManagement>
+   <!-- <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -69,7 +69,7 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
-    </dependencyManagement>
+    </dependencyManagement>-->
 
 
     <build>
