--- a/Admin/esp-gateway/pom.xml
+++ b/Admin/esp-gateway/pom.xml
@@ -136,7 +136,7 @@
 
     </dependencies>
 
-    <dependencyManagement>
+<!--    <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -146,7 +146,7 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
-    </dependencyManagement>
+    </dependencyManagement>-->
 
     <build>
         <finalName>${project.artifactId}</finalName>
