--- a/Admin/esp-admin/src/main/resources/application.yml
+++ b/Admin/esp-admin/src/main/resources/application.yml
@@ -1,32 +1,59 @@
+logging:
+    level:
+        tk.mybatis: DEBUG
+        com.cnpc.ucenter: DEBUG
 spring:
-  datasource:
-    name: test
-    url: jdbc:mysql://192.168.1.15:3306/esp_admin
-    username: root
-    password: 123456
-    # 使用druid数据源
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    filters: stat
-    maxActive: 20
-    initialSize: 1
-    maxWait: 60000
-    minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
+    application:
+        name: admin
+    jackson:
+        date-format: yyyy-MM-dd HH:mm:ss
+        time-zone: GMT+8
+        default-property-inclusion: non_null
+    datasource:
+        name: test
+        url: jdbc:mysql://localhost:3306/esp_ucenter?useUnicode=true&characterEncoding=UTF8
+        username: root
+        password: billjiang
+        # 使用druid数据源
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.jdbc.Driver
+        filters: stat
+        maxActive: 20
+        initialSize: 1
+        maxWait: 60000
+        minIdle: 1
+        timeBetweenEvictionRunsMillis: 60000
+        minEvictableIdleTimeMillis: 300000
+        validationQuery: select 'x'
+        testWhileIdle: true
+        testOnBorrow: false
+        testOnReturn: false
+        poolPreparedStatements: true
+        maxOpenPreparedStatements: 20
 mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.cnpc.admin.entity
+    basepackage: com.cnpc.ucenter.mapper
+    xmlLocation: classpath:mapper/**/*.xml
+
 server:
-  port: 8888
-pagehelper:
-  dialect: com.github.pagehelper.dialect.helper.MySqlDialect #配置拦截器
+    port: 8085
 
-
-
+eureka:
+    instance:
+        statusPageUrlPath: /info
+        healthCheckUrlPath: /health
+        # docker 部署开启
+#        prefer-ip-address: true
+#        ip-address: 127.0.0.1
+    client:
+        registerWithEureka: true
+        fetchRegistry: true
+        serviceUrl:
+            defaultZone: http://localhost:8761/eureka/
+                    # docker 部署开启
+#            defaultZone: http://center:8761/eureka/
+swagger:
+    basepackage: com.cnpc.ucenter
+    service:
+        name: user center for AdminESP
+        description: AdminESP 用户中心
+        developer: billjiang
