--- a/Admin/esp-admin/src/main/resources/application.yml
+++ b/Admin/esp-admin/src/main/resources/application.yml
@@ -1,17 +1,17 @@
 logging:
     level:
         tk.mybatis: DEBUG
-        com.cnpc.ucenter: DEBUG
+        com.cnpc.admin: DEBUG
 spring:
     application:
-        name: admin
+        name: esp-admin
     jackson:
         date-format: yyyy-MM-dd HH:mm:ss
         time-zone: GMT+8
         default-property-inclusion: non_null
     datasource:
         name: test
-        url: jdbc:mysql://localhost:3306/esp_ucenter?useUnicode=true&characterEncoding=UTF8
+        url: jdbc:mysql://localhost:3306/esp-admin?useUnicode=true&characterEncoding=UTF8
         username: root
         password: billjiang
         # 使用druid数据源
@@ -31,8 +31,13 @@ spring:
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
 mybatis:
-    basepackage: com.cnpc.ucenter.mapper
+    basepackage: com.cnpc.admin.mapper
     xmlLocation: classpath:mapper/**/*.xml
+    # id 主键生成
+    mappers: tk.mybatis.mapper.common.Mapper
+    identity: SELECT REPLACE(UUID(),'-','')
+    order: BEFORE
+    type-aliases-package: com.cnpc.admin.entity
 
 server:
     port: 8085
@@ -44,6 +49,7 @@ eureka:
         # docker 部署开启
 #        prefer-ip-address: true
 #        ip-address: 127.0.0.1
+        instance-id: ${spring.application.name}:${spring.cloud.client.ipAddress}:${server.port}
     client:
         registerWithEureka: true
         fetchRegistry: true
@@ -52,7 +58,7 @@ eureka:
                     # docker 部署开启
 #            defaultZone: http://center:8761/eureka/
 swagger:
-    basepackage: com.cnpc.ucenter
+    basepackage: com.cnpc.admin
     service:
         name: user center for AdminESP
         description: AdminESP 用户中心
