--- a/Admin/esp-common/pom.xml
+++ b/Admin/esp-common/pom.xml
@@ -9,11 +9,11 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>common</artifactId>
+    <artifactId>esp-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>common</name>
+    <name>esp-common</name>
     <description>Demo project for Spring Boot</description>
 
 
