--- a/Admin-UI/package.json
+++ b/Admin-UI/package.json
@@ -85,6 +85,7 @@
     "webpack": "2.6.1",
     "webpack-bundle-analyzer": "2.8.2",
     "webpack-dev-middleware": "1.10.2",
+    "webpack-dev-server": "^2.9.1",
     "webpack-hot-middleware": "2.18.0",
     "webpack-merge": "4.1.0"
   },
