--- a/Admin-UI/package.json
+++ b/Admin-UI/package.json
@@ -76,13 +76,14 @@
     "sass-loader": "6.0.5",
     "script-loader": "0.7.0",
     "semver": "5.3.0",
+    "src": "^1.1.2",
     "style-loader": "0.17.0",
     "svg-sprite-loader": "3.2.4",
     "url-loader": "0.5.8",
     "vue-loader": "13.0.4",
     "vue-style-loader": "3.0.1",
     "vue-template-compiler": "2.4.2",
-    "webpack": "2.6.1",
+    "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "2.8.2",
     "webpack-dev-middleware": "1.10.2",
     "webpack-dev-server": "^2.9.1",
@@ -93,7 +94,7 @@
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserlist": [
+  "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
