--- a/Admin/esp-admin/src/main/resources/application.yml
+++ b/Admin/esp-admin/src/main/resources/application.yml
@@ -11,12 +11,12 @@ spring:
         default-property-inclusion: non_null
     datasource:
         name: test
-        #url: jdbc:mysql://localhost:3306/esp-admin?useUnicode=true&characterEncoding=UTF8
-        #username: root
-        #password: billjiang
-        url: jdbc:mysql://10.27.213.67:3306/esp-admin?useUnicode=true&characterEncoding=UTF8
+        url: jdbc:mysql://localhost:3306/esp-admin?useUnicode=true&characterEncoding=UTF8
         username: root
-        password: mysql
+        password: billjiang
+        #url: jdbc:mysql://10.27.213.67:3306/esp-admin?useUnicode=true&characterEncoding=UTF8
+        #username: root
+        #password: mysql
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
