--- a/Admin/esp-gateway/src/main/resources/application.yml
+++ b/Admin/esp-gateway/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8765
 
-#s网关注册
+#网关注册
 eureka:
   client:
     service-url:
@@ -77,5 +77,19 @@ hystrix:
             timeoutInMilliseconds: 8000
 
 
-
+---
+spring:
+  profiles: docker
+  redis:
+    database: 0
+    host: redis
+    pool:
+      max-active: 20
+    password: billjiang
+server:
+  port: ${{SERVER_PORT}:8765}
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_SERVER_LIST}
 
