--- a/Admin/esp-registry/src/main/resources/application.yml
+++ b/Admin/esp-registry/src/main/resources/application.yml
@@ -6,6 +6,7 @@ server:
 eureka:
   instance:
     hostname: localhost
+    prefer-ip-address: true
   client:
     fetch-registry: false
     register-with-eureka: false
